--- a/app/src/main/res/layout/list_single_card.xml
+++ b/app/src/main/res/layout/list_single_card.xml
@@ -20,7 +20,8 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@android:drawable/ic_delete" />
 
 
         <TextView
