--- a/app/src/main/res/layout/alert_choose_media.xml
+++ b/app/src/main/res/layout/alert_choose_media.xml
@@ -26,8 +26,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
-        android:background="@android:color/holo_green_dark"
-        android:text="Media recommandé" />
+        android:background="@color/bt_reco_color"
+        android:text="Media recommandé"
+        android:textColor="#f0f0f0" />
 
     <GridView
         android:id="@+id/gridView"
