--- a/app/src/main/res/layout/subject_item.xml
+++ b/app/src/main/res/layout/subject_item.xml
@@ -31,13 +31,13 @@
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="218dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textAlignment="center"
-        android:textSize="10sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/iv_picture_media"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/iv_pres"
@@ -46,11 +46,12 @@
     <TextView
         android:id="@+id/tv_description"
         android:layout_width="352dp"
-        android:layout_height="47dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:text="TextView"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
